--- a/css/custom.css
+++ b/css/custom.css
@@ -90,18 +90,18 @@ body {
   color: white;
   }
   
-  .blockquote:before {
-  font-style: normal;
-  font-family: 'Manrope', sans-serif;  display: block;
-  padding-left: 10px;
-  content: "\201C";
-  font-size: 80px;
-  position: absolute;
-  left: -20px;
-  top: -30px;
-  color: #fff;
-  /* color:  #FD7E14; */
-  }
+  /* .blockquote:before {
+    font-style: normal;
+    font-family: 'Manrope', sans-serif;  display: block;
+    padding-left: 10px;
+    content: "\201C";
+    font-size: 80px;
+    position: absolute;
+    left: -20px;
+    top: -30px;
+    color: #fff;
+    color:  #FD7E14;
+    } */
   
   .blockquote-cite {
   color: #999999;
